--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-70x70.png" rel="mstile" sizes="70x70">
   <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon.ico" rel="favicon">
   <link href="//s3.amazonaws.com/freecodecamp/favicons/favicon.ico" rel="shortcut icon">
-  <link href="/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body class="top-and-bottom-margins">
   <script>
@@ -93,48 +93,54 @@
     </div>
   </div>
   <div class="container text-center">
-    <h1>Become a Supporter.</h4>
+    <h1>Become a Supporter.</h1>
     <h4>freeCodeCamp is a small nonprofit that helps busy people learn to code for free.</h4> 
     <h4>You can learn from thousands of videos, articles, and interactive coding challenges.</h4>
     <h4>You can also join one of 1,000+ study groups worldwide.</h4> 
     <h4>And we're just getting started.</h4>
     <h4>Help us pay for servers and other costs. Set up a monthly donation you can afford:</h4>
     <div class="spacer"></div>
-    <div class="row">
-        <div class="col-xs-1"></div>
-        <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'Freecodecamp donate 20 recurring');" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
-          </form>
-        </div>
-        <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'Freecodecamp donate 20 recurring');" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value=' $50'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
-          </form>
-        </div>
-        <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'Freecodecamp donate 20 recurring');" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
-          </form>
-        </div>
-        <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', '$20');" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
-          </form>
-        </div>
-        <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', '$ recurring');" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
-          </form>
-        </div>
-        <div class="col-xs-1"></div>
+    <div class="xs-hidden">
+      <div class="row">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-2">
+            <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'Freecodecamp donate 20 recurring');" target="_blank">
+              <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+            </form>
+          </div>
+          <div class="col-xs-2">
+            <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'Freecodecamp donate 20 recurring');" target="_blank">
+              <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value=' $50'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+            </form>
+          </div>
+          <div class="col-xs-2">
+            <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'Freecodecamp donate 20 recurring');" target="_blank">
+              <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+            </form>
+          </div>
+          <div class="col-xs-2">
+            <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', '$20');" target="_blank">
+              <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+            </form>
+          </div>
+          <div class="col-xs-2">
+            <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', '$ recurring');" target="_blank">
+              <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+            </form>
+          </div>
+          <div class="col-xs-1"></div>
+          </div>
         </div>
       </div>
     </div>
     <h2 class="text-center">Thanks for your support!</h2>
     <div class="spacer"></div>
+    <script> function closeWindow() {
+      window.close();
+    }
+    </script>
     <div class="text-center"> 
-      <a class="btn btn-default" href="/donate/donation-abandoned">Maybe later</a>
+      <a class="btn btn-default" href="#" onclick="closeWindow()">Maybe later</a>
     </div>
   </div><!-- scripts should be moved here-->
   <script src="https://cdn.optimizely.com/js/999692993.js">
