--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     }
     </script>
     <div class="text-center"> 
-      <a class="btn btn-default" href="#" onclick="closeWindow()">Maybe later</a>
+      <a class="btn btn-default" href="/donate/donation-abandoned">Maybe later</a>
     </div>
   </div><!-- scripts should be moved here-->
   <script src="https://cdn.optimizely.com/js/999692993.js">
