make it more responsive

--- a/donation-successful.html
+++ b/donation-successful.html
@@ -63,7 +63,7 @@
   <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-70x70.png" rel="mstile" sizes="70x70">
   <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon.ico" rel="favicon">
   <link href="//s3.amazonaws.com/freecodecamp/favicons/favicon.ico" rel="shortcut icon">
-  <link href="/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body class="top-and-bottom-margins">
   <script>
