--- a/index.html
+++ b/index.html
@@ -100,47 +100,62 @@
     <h4>And we're just getting started.</h4>
     <h4>Help us pay for servers and other costs. Set up a monthly donation you can afford:</h4>
     <div class="spacer"></div>
-    <div class="xs-hidden">
+    <div class="hidden-xs hidden-sm">
       <div class="row">
-          <div class="col-xs-1"></div>
-          <div class="col-xs-2">
-            <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'Freecodecamp donate 20 recurring');" target="_blank">
-              <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
-            </form>
-          </div>
-          <div class="col-xs-2">
-            <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'Freecodecamp donate 20 recurring');" target="_blank">
-              <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value=' $50'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
-            </form>
-          </div>
-          <div class="col-xs-2">
-            <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'Freecodecamp donate 20 recurring');" target="_blank">
-              <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
-            </form>
-          </div>
-          <div class="col-xs-2">
-            <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', '$20');" target="_blank">
-              <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
-            </form>
-          </div>
-          <div class="col-xs-2">
-            <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', '$ recurring');" target="_blank">
-              <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
-            </form>
-          </div>
-          <div class="col-xs-1"></div>
-          </div>
+        <div class="col-xs-1"></div>
+        <div class="col-xs-2">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 250 recurring');" target="_blank">
+            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+          </form>
         </div>
+        <div class="col-xs-2">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 50 recurring');" target="_blank">
+            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+          </form>
+        </div>
+        <div class="col-xs-2">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 35 recurring');" target="_blank">
+            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+          </form>
+        </div>
+        <div class="col-xs-2">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 10 recurring');" target="_blank">
+            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+          </form>
+        </div>
+        <div class="col-xs-2">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 3 recurring');" target="_blank">
+            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+          </form>
+        </div>
+        <div class="col-xs-1"></div>
       </div>
+    </div>
+    <div class="hidden-md hidden-lg">
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 250 recurring');" target="_blank">
+        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+      </form>
+      <div class="spacer"></div>
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 50 recurring');" target="_blank">
+        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+      </form>
+      <div class="spacer"></div>
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 35 recurring');" target="_blank">
+        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+      </form>
+      <div class="spacer"></div>
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 10 recurring');" target="_blank">
+        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+      </form>
+      <div class="spacer"></div>
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 3 recurring');" target="_blank">
+        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+      </form>
     </div>
     <h2 class="text-center">Thanks for your support!</h2>
     <div class="spacer"></div>
-    <script> function closeWindow() {
-      window.close();
-    }
-    </script>
     <div class="text-center"> 
-      <a class="btn btn-default" href="/donate/donation-abandoned">Maybe later</a>
+      <a class="btn btn-default" href="https://www.freecodecamp.com/donate/donation-abandoned">Maybe later</a>
     </div>
   </div><!-- scripts should be moved here-->
   <script src="https://cdn.optimizely.com/js/999692993.js">
