--- a/donation-successful.html
+++ b/donation-successful.html
@@ -5,7 +5,7 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="X5tHeKjV-jMLyp4VMoUhW9PAYaOjtPslV250" name="csrf-token">
-  <title>Support freeCodeCamp's nonprofit community</title>
+  <title>Support freeCodeCamp's open source community with a donation by donating to our nonprofit</title>
   <link href="http://freecodecamp.com" rel="canonical">
   <meta charset="utf-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -94,7 +94,7 @@
   </div>
   <div class="container text-center">
     <h1 class="text-center">Success!</h1>
-    <h3>Thank you so much for supporting our nonprofitsetting up your monthly donation.</h3>
+    <h3>Thank you so much for supporting our nonprofit by setting up your monthly donation.</h3>
     <h3>You can close this tab.</h3>
   </div><!-- scripts should be moved here-->
   <script src="https://cdn.optimizely.com/js/999692993.js">
