--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="X5tHeKjV-jMLyp4VMoUhW9PAYaOjtPslV250" name="csrf-token">
-  <title>Support freeCodeCamp's nonprofit community</title>
+  <title>Support freeCodeCamp's open source community with a donation by donating to our nonprofit</title>
   <link href="http://freecodecamp.com" rel="canonical">
   <meta charset="utf-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
