--- a/donation-abandoned.html
+++ b/donation-abandoned.html
@@ -72,6 +72,7 @@
          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-55446531-1', 'auto');
+  ga('require', 'GTM-KRCFSTQ');
   ga('require', 'displayfeatures');
   ga('send', 'pageview');
   </script><!-- Leave the below lines alone!-->
@@ -159,10 +160,5 @@
     </div>
     <h2 class="text-center">Thanks for your support!</h2>
   </div>
-</body>
-</html>
-  </div><!-- scripts should be moved here-->
-  <script src="https://cdn.optimizely.com/js/999692993.js">
-  </script>
 </body>
 </html>
