--- a/donation-successful.html
+++ b/donation-successful.html
@@ -72,6 +72,7 @@
          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-55446531-1', 'auto');
+  ga('require', 'GTM-KRCFSTQ');
   ga('require', 'displayfeatures');
   ga('send', 'pageview');
   </script><!-- Leave the below lines alone!-->
@@ -96,8 +97,6 @@
     <h1 class="text-center">Success!</h1>
     <h3>Thank you so much for supporting our nonprofit by setting up your monthly donation.</h3>
     <h3>You can close this tab.</h3>
-  </div><!-- scripts should be moved here-->
-  <script src="https://cdn.optimizely.com/js/999692993.js">
-  </script>
+  </div>
 </body>
 </html>
