--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-55446531-1', 'auto');
+  ga('require', 'GTM-KRCFSTQ');
   ga('require', 'displayfeatures');
   ga('send', 'pageview');
   </script><!-- Leave the below lines alone!-->
@@ -157,8 +158,6 @@
     <div class="text-center"> 
       <a class="btn btn-default" href="https://www.freecodecamp.com/donate/donation-abandoned">Maybe later</a>
     </div>
-  </div><!-- scripts should be moved here-->
-  <script src="https://cdn.optimizely.com/js/999692993.js">
-  </script>
+  </div>
 </body>
 </html>
