--- a/donation-abandoned.html
+++ b/donation-abandoned.html
@@ -113,6 +113,12 @@
     <h4>Help us pay for servers and other costs. Set up a monthly donation you can afford:</h4>
     <div class="spacer"></div>
     <div class="hidden-xs hidden-sm">
+      <style>.async-hide { opacity: 0 !important} </style>
+      <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
+      h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
+      (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
+      })(window,document.documentElement,'async-hide','dataLayer',4000,
+      {'GTM-KRCFSTQ':true});</script>
       <div class="row">
         <div class="col-xs-1"></div>
         <div class="col-xs-2">
