remove paypal tracking pixel

--- a/index.html
+++ b/index.html
@@ -112,27 +112,27 @@
         <div class="col-xs-1"></div>
         <div class="col-xs-2">
           <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 3 recurring');" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'>
           </form>
         </div>
         <div class="col-xs-2">
           <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 10 recurring');" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'>
           </form>
         </div>
         <div class="col-xs-2">
           <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 35 recurring');" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'>
           </form>
         </div>
         <div class="col-xs-2">
           <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 50 recurring');" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'>
           </form>
         </div>
         <div class="col-xs-2">
           <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 250 recurring');" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'>
           </form>
         </div>
         <div class="col-xs-1"></div>
@@ -140,23 +140,23 @@
     </div>
     <div class="hidden-md hidden-lg">
       <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 250 recurring');" target="_blank">
-        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'>
       </form>
       <div class="spacer"></div>
       <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 50 recurring');" target="_blank">
-        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'>
       </form>
       <div class="spacer"></div>
       <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 35 recurring');" target="_blank">
-        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'>
       </form>
       <div class="spacer"></div>
       <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 10 recurring');" target="_blank">
-        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'>
       </form>
       <div class="spacer"></div>
       <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 3 recurring');" target="_blank">
-        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'> <img alt="" border="0" height="1" src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1">
+        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'>
       </form>
     </div>
     <h2 class="text-center">Thanks for your support!</h2>
