--- a/index.html
+++ b/index.html
@@ -6,32 +6,31 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="X5tHeKjV-jMLyp4VMoUhW9PAYaOjtPslV250" name="csrf-token">
   <title>Support freeCodeCamp's open source community with a donation by donating to our nonprofit</title>
-  <link href="http://freecodecamp.com" rel="canonical">
+  <link href="http://freecodecamp.org" rel="canonical">
   <meta charset="utf-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="X5tHeKjV-jMLyp4VMoUhW9PAYaOjtPslV250" name="csrf-token">
-  <meta content="learn to code, learn to program, learn programming, learn javascript, learn coding, code, coding, programming, software engineer, software developer, mean stack, web development, development, engineering, learn node.js, learn angular.js, learn express.js, learn mongoDB, coding bootcamp, javascript, open source" name="keywords">
-  <meta content="Learn to code and help nonprofits" property="og:title">
+  <meta content="Learn to code with free online courses, programming projects, and interview preparation for developer jobs." property="og:title">
   <meta content="freeCodeCamp" property="og:site_name">
   <meta content="on" name="twitter:widgets:csp">
   <meta content="d0bc047a482c03c24f1168004c2a216a" name="p:domain_verify">
-  <meta content="http://www.freecodecamp.com" property="og:url">
-  <meta content="Learn to code and build projects for nonprofits. Build your full stack web development portfolio today." property="og:description">
+  <meta content="https://www.freecodecamp.org" property="og:url">
+  <meta content="Learn to code with free online courses, programming projects, and interview preparation for developer jobs." property="og:description">
   <meta content="https://s3.amazonaws.com/freecodecamp/curriculum-diagram-full.jpg" property="og:image">
   <meta content="article" property="og:type">
   <meta content="https://www.facebook.com/freecodecamp" property="article:publisher">
   <meta content="Responsive" property="article:section">
   <link href="https://plus.google.com/+Freecodecamp" rel="publisher">
   <link href="https://plus.google.com/+Freecodecamp" rel="author">
-  <meta content="Learn to code and build projects for nonprofits. Build your full stack web development portfolio today." name="description">
+  <meta content="Learn to code with free online courses, programming projects, and interview preparation for developer jobs." name="description">
   <meta content="@freecodecamp" name="twitter:creator">
-  <meta content="http://www.freecodecamp.com" name="twitter:url">
+  <meta content="http://www.freecodecamp.org" name="twitter:url">
   <meta content="@freecodecamp" name="twitter:site">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="https://s3.amazonaws.com/freecodecamp/curriculum-diagram-full.jpg" name="twitter:image:src">
   <meta content="Learn to code and help nonprofits" name="twitter:title">
-  <meta content="We're an open source community of busy people who learn to code and build projects for nonprofits. Build your full stack web development portfolio today." name="twitter:description">
+  <meta content="Learn to code with free online courses, programming projects, and interview preparation for developer jobs." name="twitter:description">
   <meta content="a40ee5d5dba3bb091ad783ebd2b1383f" name="p:domain_verify">
   <meta content="#FFFFFF" name="msapplication-TileColor">
   <meta content="/" name="msapplication-TileImage">
@@ -83,7 +82,7 @@
     <div class="return-to-free-code-camp">
       <ul class="nav navbar-nav navbar-right">
         <li class="hidden-xs return-to-free-code-camp">
-          <a href="https://www.freecodecamp.com">Return to freeCodeCamp.com</a>
+          <a href="https://www.freecodecamp.org">Return to freecodecamp.org</a>
         </li>
       </ul>
     </div>
