--- a/donation-abandoned.html
+++ b/donation-abandoned.html
@@ -66,6 +66,16 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body class="top-and-bottom-margins">
+  <script>
+  (function(i,s,o,g,r,a,m){ i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-55446531-7', 'auto');
+  ga('require', 'GTM-KRCFSTQ');
+  ga('require', 'displayfeatures');
+  ga('send', 'pageview');
+  </script><!-- Leave the below lines alone!-->
   <nav class="navbar navbar-default navbar-fixed-top nav-height">
     <div class="navbar-header">
       <a class="navbar-brand" href="/challenges/next-challenge"><img alt="learn to code javascript at freeCodeCamp logo" class="img-responsive nav-logo" src="https://s3.amazonaws.com/freecodecamp/freecodecamp_logo.svg"></a>
