--- a/donation-abandoned.html
+++ b/donation-abandoned.html
@@ -97,36 +97,30 @@
     <h4>Help us pay for servers and other costs. Set up a monthly donation you can afford:</h4>
     <div class="spacer"></div>
     <div class="hidden-xs hidden-sm">
-      <style>.async-hide { opacity: 0 !important} </style>
-      <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
-      h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
-      (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
-      })(window,document.documentElement,'async-hide','dataLayer',4000,
-      {'GTM-KRCFSTQ':true});</script>
       <div class="row">
         <div class="col-xs-1"></div>
         <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 250 recurring');" target="_blank">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 250 });" target="_blank">
             <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'>
           </form>
         </div>
         <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 50 recurring');" target="_blank">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 50 });" target="_blank">
             <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'>
           </form>
         </div>
         <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 35 recurring');" target="_blank">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 35 });" target="_blank">
             <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'>
           </form>
         </div>
         <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 10 recurring');" target="_blank">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 10 });" target="_blank">
             <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'>
           </form>
         </div>
         <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 3 recurring');" target="_blank">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 3 });" target="_blank">
             <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'>
           </form>
         </div>
@@ -134,27 +128,28 @@
       </div>
     </div>
     <div class="hidden-md hidden-lg">
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 250 recurring');" target="_blank">
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 250} );" target="_blank">
         <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'>
       </form>
       <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 50 recurring');" target="_blank">
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 50} );" target="_blank">
         <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'>
       </form>
       <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 35 recurring');" target="_blank">
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send',  { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 35} );" target="_blank">
         <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'>
       </form>
       <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 10 recurring');" target="_blank">
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send',  { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 10} );" target="_blank">
         <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'>
       </form>
       <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', 'event', 'Donate', 'clicked', 'freeCodeCamp donate 3 recurring');" target="_blank">
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send',  { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 3 } );" target="_blank">
         <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'>
       </form>
     </div>
     <h2 class="text-center">Thanks for your support!</h2>
+    <div class="spacer"></div>
   </div>
 </body>
 </html>
