--- a/index.html
+++ b/index.html
@@ -104,27 +104,27 @@
       <div class="row">
         <div class="col-xs-1"></div>
         <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 250 });" target="_blank">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onclick="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 250 });" target="_blank">
             <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'>
           </form>
         </div>
         <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 50 });" target="_blank">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onclick="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 50 });" target="_blank">
             <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'>
           </form>
         </div>
         <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 35 });" target="_blank">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onclick="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 35 });" target="_blank">
             <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'>
           </form>
         </div>
         <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 10 });" target="_blank">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onclick="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 10 });" target="_blank">
             <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'>
           </form>
         </div>
         <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 3 });" target="_blank">
+          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onclick="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 3 });" target="_blank">
             <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'>
           </form>
         </div>
@@ -132,23 +132,23 @@
       </div>
     </div>
     <div class="hidden-md hidden-lg">
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 250} );" target="_blank">
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onclick="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 250} );" target="_blank">
         <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'>
       </form>
       <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 50} );" target="_blank">
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onclick="ga('send', { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 50} );" target="_blank">
         <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'>
       </form>
       <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send',  { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 35} );" target="_blank">
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onclick="ga('send',  { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 35} );" target="_blank">
         <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'>
       </form>
       <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send',  { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 10} );" target="_blank">
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onclick="ga('send',  { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 10} );" target="_blank">
         <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'>
       </form>
       <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send',  { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 3 } );" target="_blank">
+      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onclick="ga('send',  { eventCategory: 'donation', eventAction: 'Click', eventLabel: 'Donation', eventValue: 3 } );" target="_blank">
         <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'>
       </form>
     </div>
