--- a/index.html
+++ b/index.html
@@ -155,5 +155,6 @@
     <h2 class="text-center">Thanks for your support!</h2>
     <div class="spacer"></div>
   </div>
+    <footer>All rights Reserved</footer>
 </body>
 </html>
