slightly modify copy

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
   </div>
   <div class="container text-center">
     <h1>Become a Supporter.</h1>
-    <h4>freeCodeCamp is a small nonprofit that helps busy people learn to code for free.</h4> 
+    <h4>freeCodeCamp is a small nonprofit that helps you learn to code for free.</h4> 
     <h4>You can learn from thousands of videos, articles, and interactive coding challenges.</h4>
-    <h4>You can also join one of 1,000+ study groups worldwide.</h4> 
+    <h4>You can also join one of thousands of local study groups worldwide.</h4> 
     <h4>And we're just getting started.</h4>
     <h4>Help us pay for servers and other costs. Set up a monthly donation you can afford:</h4>
     <div class="spacer"></div>
